# ortese-control-node

./: .gitignore  CMakeLists.txt  README.md  TESTES.md  control.launch.py  control.yaml  mg_motor_can.cpp  mg_motor_can.hpp  package.xml
config/: control.yaml
data/: README.md
include/control_node/: mg_motor_serial.hpp  mot_reader.hpp  pid_controller.hpp  trajectory_proc.hpp
launch/: control.launch.py
scripts/: plotar_telemetria.py
src/: control_node.cpp  logger_node.cpp  mg_motor_serial.cpp  mostra_protocolo.cpp  mot_reader.cpp  test_node.cpp  test_torque_node.cpp  trajectory_node.cpp  trajectory_proc.cpp
